<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_patient_name"
        android:hint="@string/hint_patient_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/et_patient_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_gender"
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/rg_gender"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_male"
            android:text="@string/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_female"
            android:text="@string/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <EditText
        app:layout_constraintTop_toBottomOf="@id/rg_gender"
        android:hint="@string/hint_mobile_number"
        android:id="@+id/et_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_mobile_no"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginStart="@dimen/common_margin"

        app:layout_constraintStart_toEndOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/et_mobile_no"
        android:text="@string/btn_show_all"
        android:id="@+id/btn_show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button

        android:text="@string/btn_add_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        android:id="@+id/btn_goto_add_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_add_doctor"
        android:text="@string/btn_new_apt"
        android:id="@+id/btn_new_apt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_new_apt"
        android:text="@string/btn_all_apts"
        android:id="@+id/btn_goto_apts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>