<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_add_doctor"
    android:padding="@dimen/common_padding"
    tools:context=".AddDoctorActivity">

    <EditText
        android:hint="@string/hint_doctor_name"
        android:id="@+id/et_doctor_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText

        android:hint="@string/hint_mobile_number"
        app:layout_constraintTop_toBottomOf="@id/et_doctor_name"
        android:id="@+id/et_doctor_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_add_doctor"
        android:text="@string/btn_add_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_doctor_mobile_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>